plugins {
	id 'org.springframework.boot' version '2.4.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

bootJar {
    archiveFileName = 'OurMemory.jar'
}

group = 'com.kds.ourmemory'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'net.rakugakibox.util:yaml-resource-bundle:1.1'

	implementation 'org.apache.commons:commons-lang3:3.12.0'

	implementation 'com.google.firebase:firebase-admin:8.1.0'
	implementation 'com.squareup.okhttp3:okhttp:4.9.3'

	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
	implementation 'com.google.guava:guava:31.0.1-jre'

	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testCompileOnly 'org.projectlombok:lombok:1.18.22'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.3'
	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
	testRuntimeOnly 'com.h2database:h2:2.1.210'
}

test {
	useJUnitPlatform()
}
